--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.15.9",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
